--- a/src/app/home/scss/_home.scss
+++ b/src/app/home/scss/_home.scss
@@ -1,287 +1,111 @@
-
 .home {
-  .hero {
+	.hero {
+		text-align: center;
+		height: 640px;
+		position: relative;
 
-    text-align: center;
+	    .content { 
+	    	border: 2px solid #f2f2f2;
+	        padding: 30px 115px 30px 115px; 
+	        position: absolute;
+	        display: inline-block;
+	        top: 50%;
+	        left: 50%;
+	        transform: translate(-50%, -50%);
+	    }
 
-    @media screen and (max-width: $screen-sm-max) {
-      // phones and tablets below 991px
+	    .content h2 { margin: 0; }
+	    .content h4 { margin-top: 32px; }
 
-      
-      background: url('../content/images/home-phone.jpg'); 
-      background-size: cover;
-      height: 640px;
-      position: relative;
+	    .content h2, 
+	    .content h4 { letter-spacing: .1em; color: white; }
 
-      .content { 
-        border: 2px solid #f2f2f2;
-        padding: 30px 115px 30px 115px; 
-        position: absolute;
-        display: inline-block;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+	    .content .icon { position: relative; margin-top: 32px; display: inline-block; opacity: .8; }
+	    .content .icon .fa-linkedin-square { margin-left: 0; color: white; }
+	    .content .icon .fa-github-square { margin-left: 29px; color: white; }
+	    .content .icon .fa-envelope-o { margin-left: 29px; color: white; }
 
-      .content h2 { margin: 0; }
-      .content h4 { margin-top: 32px; }
-      
-      .content h2, 
-      .content h4 { letter-spacing: .1em; color: #f2f2f2; }
-      
-      .content .icon { position: relative; margin-top: 32px; display: inline-block; opacity: .8; }
-      .content .icon .fa-linkedin-square { margin-left: 0; }
-      .content .icon .fa-github-square { margin-left: 29px; }
-      .content .icon .fa-envelope-o { margin-left: 29px; }
+		@media screen and (max-width: $screen-sm-max) {
+	      background: url('../content/images/home-phone.jpg'); 
+	      background-size: cover;
+	    }
 
-    }
+	    @media screen and (min-width: $screen-md-min) {
+	      background: url('../content/images/home-desktop.jpg'); 
+	      background-size: cover;
+	    }
+	}
 
-    @media screen and (min-width: $screen-md-min) {
-      // laptops and desktop over 992px
+	.backgrounds {
+		height: 620px; 
+		background: $primary;
 
-      background: url('../content/images/home-desktop.jpg'); 
-      background-size: cover;
-      height: 640px;
-      position: relative;
-      background-position-y: -227px;
+		.content-container {
+		    height: 620px;
+		    position: relative;
+		}
 
-      .content { 
-        border: 2px solid #f2f2f2;
-        padding: 30px 115px 30px 115px; 
-        position: absolute;
-        display: inline-block;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
 
-      .content h2 { margin: 0; }
-      .content h4 { margin-top: 32px; }
-      
-      .content h2, 
-      .content h4 { letter-spacing: .1em; color: #f2f2f2; }
-      
-      .content .icon { position: relative; margin-top: 32px; display: inline-block; opacity: .8; }
-      .content .icon .fa-linkedin-square { margin-left: 0; color: #f2f2f2; }
-      .content .icon .fa-github-square { margin-left: 29px; color: #f2f2f2; }
-      .content .icon .fa-envelope-o { margin-left: 29px; color: #f2f2f2; }
-    }
-  }
+		.content-container .content {
+		    color: $text-secondary;
+		    position: absolute;
+		    top: 50%;
+		    transform: translate(0, -50%);
+		    h3 { margin-top: 0; color: $text; }
+		}
+
+
+		.image-container {
+		    height: 620px;
+		    text-align: center;
+		    position: relative; 
+		}
+
+		.image-container .image {
+		    background: url('../content/images/home-background.jpg');
+		    background-size: cover;
+		    display: inline-block;
+		    height: 350px;
+		    width: 350px;
+		    border-radius: 50%;
+		    position: absolute;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%);
+		}
+	}
+
+	.programmings {
+    	height: 620px;
+    	background: $primary;
+
+		.content-container {
+			height: 620px;
+		    position: relative;
+		}
+		.content-container .content {
+		    color: $text-secondary;
+		    position: absolute;
+		    top: 50%;
+		    transform: translate(0, -50%);
+		    h3 { margin-top: 0; color: $text; }
+  		}
+
+	  	.image-container {
+		    height: 620px; 
+		    position: relative;
+		}
+
+		.image-container .image {
+		    background: url('../content/images/home-programming.jpg');
+		    background-size: cover;
+		    border-radius: 50%;
+		    width: 350px;
+		    height: 350px;
+		    top: 50%;
+		    left: 50%;
+		    position: absolute;
+		    transform: translate(-50%, -50%);
+		}
+	}
 }
-
-@media screen and (max-width: $screen-sm-max){
-  // phones and tablets
-
-  .backgrounds { 
-
-    background: blue; 
-    height: 640px; 
-
-  .content-container {
-    height: 640px;
-    position: relative;
-    }
-
-  .content-container .content {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    h3 { margin-top: 0; }
-    }
-
-  .image-container {
-    height: 640px;
-    text-align: center;
-    position: relative;
- 
-    }
-
-  .image-container .image {
-    background: url('../content/images/home-background.jpg');
-    background-size: cover;
-    display: inline-block;
-    height: 350px;
-    width: 350px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    }
-
-  }
-
-  .programmings {
-
-    background-color: #f6f6f6;
-    height: 640px;
-  
-  .content-container {
-
-    height: 640px;
-    position: relative;
-  }
-
-  .content-container .content {
-
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    h3 { margin-top: 0; }
-  }
-
-  .image-container {
-
-    height: 640px; 
-    position: relative;
-
-  }
-  .image-container .image {
-    background: url('../content/images/home-programming.jpg');
-    background-size: cover;
-    background-position-y: -85px;
-    border-radius: 50%;
-    width: 350px;
-    height: 350px;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-  }
-}
-
-}
-
-@media screen and (min-width: $screen-md-min) {
-  // laptops and desktop
-
-  .backgrounds { 
-
-    background: pink; 
-    height: 640px; 
-
-  .content-container {
-    height: 640px;
-    position: relative;
-    }
-
-  .content-container .content {
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    h3 { margin-top: 0; }
-    }
-
-  .image-container {
-    height: 640px;
-    text-align: center;
-    position: relative;
- 
-    }
-
-  .image-container .image {
-    background: url('../content/images/home-background.jpg');
-    background-size: cover;
-    display: inline-block;
-    height: 350px;
-    width: 350px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    }
-
-  }
-
-  .programmings {
-
-    background-color: #f6f6f6;
-    height: 640px;
-  
-  .content-container {
-
-    height: 640px;
-    position: relative;
-  }
-
-  .content-container .content {
-
-    position: absolute;
-    top: 50%;
-    transform: translate(0, -50%);
-    h3 { margin-top: 0; }
-  }
-
-  .image-container {
-
-    height: 640px; 
-    position: relative;
-
-  }
-  .image-container .image {
-    background: url('../content/images/home-programming.jpg');
-    background-size: cover;
-    border-radius: 50%;
-    width: 350px;
-    height: 350px;
-    top: 50%;
-    left: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-  }
-}
-
-}
-
-/*
-.home {
-
-  @media screen and (max-width: $screen-sm-max) {
-    // phones and tablets
-  }
-
-  @media screen and (min-width: $screen-md-min) {
-    // laptops and desktop
-  }
-
-  .hero {
-    @media screen and (max-width: $screen-sm-max) {
-      // phones and tablets
-    }
-
-    @media screen and (min-width: $screen-md-min) {
-      // laptops and desktop
-    }
-  }
-
-  .backgrounds {
-    @media screen and (max-width: $screen-sm-max) {
-      // phones and tablets
-    }
-
-    @media screen and (min-width: $screen-md-min) {
-      // laptops and desktop
-    }
-  }
-
-  .programmings {
-    @media screen and (max-width: $screen-sm-max) {
-      // phones and tablets
-    }
-
-    @media screen and (min-width: $screen-md-min) {
-      // laptops and desktop
-    }
-  }
-}*/
-
-
-
-
-
-
-
-
-
-
