--- a/src/main.scss
+++ b/src/main.scss
@@ -51,13 +51,13 @@
 
 
 // App specific
+@import "app/shared/scss/color";
 @import "app/about/scss/about";
 @import "app/contact/scss/contact";
 @import "app/home/scss/home";
 @import "app/projects/scss/projects";
 @import "app/resume/scss/resume";
 @import "app/shared/scss/circle";
-@import "app/shared/scss/fonts";
 @import "app/shared/scss/footer";
 @import "app/shared/scss/global";
 @import "app/shared/scss/headings";
