--- a/src/app/shared/scss/_footer.scss
+++ b/src/app/shared/scss/_footer.scss
@@ -1,8 +1,7 @@
-.footer { background: grey; padding-top: 20px; }
-.footer a { display: block; color: white; line-height: 30px; font-family: OpenSans-Light; cursor: pointer; text-decoration: none; }
-.footer a:hover { color: #ecf0f1; text-decoration: none; }
-.footer p { margin-top: 10px; display: block; color: white; line-height: 30px; font-family: OpenSans-Light; 
-            border-top: 1px solid white; }
+.footer { background: $primary; padding-top: 20px; }
+.footer a { display: block; color: $text; line-height: 30px; cursor: pointer; text-decoration: none; }
+.footer a:hover { color: $accent-hover; text-decoration: none; }
+.footer p { padding-top: .6em; margin-top: 10px; display: block; color: $text-secondary; line-height: 30px; border-top: 1px solid $divider; }
 
 * { margin: 0; }
 html, body { height: 100%; }
@@ -10,8 +9,8 @@ html, body { height: 100%; }
 	min-height: 100%;
 	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
 	height: 100%;
-	margin: 0 auto -175px; /* the bottom margin is the negative value of the footer's height */
+	margin: 0 auto -220px; /* the bottom margin is the negative value of the footer's height */
 }
 .footer, .push {
-	height: 175px; /* .push must be the same height as .footer */
+	height: 220px; /* .push must be the same height as .footer */
 }
