--- a/src/app/shared/scss/_nav.scss
+++ b/src/app/shared/scss/_nav.scss
@@ -1,6 +1,6 @@
 .navbar { background: $primary; }
 
-.navbar .navbar-nav > li > a { color: $text; }
+.navbar .navbar-nav > li > a { font-size: 16px; color: $text; }
 .navbar .navbar-nav > li > a:hover { color: $accent-hover; }
 .navbar .navbar-nav > li > a.active { color: $accent-hover; }
 
