--- a/src/app/shared/scss/_footer.scss
+++ b/src/app/shared/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer { background: $primary; }
-.footer p { padding-top: .6em; margin-top: 10px; display: block; color: $text-secondary; line-height: 30px; border-top: 1px solid $divider; }
+.footer p { padding-top: .6em; display: block; color: $text-secondary; line-height: 30px; border-top: 1px solid $divider; }
 
 .wrapper {
 	min-height: 100%;
