--- a/src/app/resume/scss/_resume.scss
+++ b/src/app/resume/scss/_resume.scss
@@ -8,19 +8,29 @@
 	.hero h1 { line-height: 320px; }
 }
 
+.skill {
+	padding-top: 120px;
+	padding-bottom: 120px;
+}
+
+.image {
+	text-align: center;
+	margin-bottom: 15px;
+}
+
 .main-skill-container {
-	padding: 32px;
-	text-align: left;
+	text-align: center;
 }
 
 .main-skill {
 	color: $accent;
 	border-bottom: 10px solid $divider;
+	display: inline-block;
 }
 
 
 .sub-skill-container {
-	text-align: left;
+	text-align: center;
 }
 
 .sub-skill {
@@ -28,5 +38,9 @@
 	font-size: 16px;
 	line-height: 28px;
 	color: $text-secondary;
-	margin-bottom: 15px; 
+	margin-bottom: 5px; 
+}
+
+.js .main-skill {
+	
 }
